--- a/workflow-templates/python-library.yml
+++ b/workflow-templates/python-library.yml
@@ -27,3 +27,29 @@ jobs:
 			- name: Test
 				run: |
 					pytest
+	publish:
+		if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+		needs: [build]
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+					pip install wheel
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+			- name: Build and publish
+				run: |
+					python setup.py bdist_wheel sdist
+      - name: set up jfrog cli
+        uses: jfrog/setup-jfrog-cli@v1
+        env:
+          JF_ARTIFACTORY_1: ${{ secrets.ARTIFACTORY_TOKEN_1 }}
+      - name: Upload artifact to jfrog
+        run: |
+          zip -r ${{ github.event.repository.name }}-${{ github.event.inputs.tag }}.zip dist/*
+          jfrog rt u ${{ github.event.repository.name }}-${{ github.event.inputs.tag }}.zip pypi.coralogix.net/
