--- a/workflow-templates/python-library.yml
+++ b/workflow-templates/python-library.yml
@@ -3,11 +3,13 @@ name: Python Library CI
 on:
   push:
     branches: [ $default-branch ]
+		tags: *
   pull_request:
     branches: [ $default-branch ]
 
 jobs:
   build:
+		if: startsWith(github.ref, 'refs/head/')
     runs-on: ubuntu-latest
     strategy:
       matrix:
